argocd/email-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  type: ClusterIP
  selector:
    app: email-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
