argocd/email-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /email
          pathType: Prefix
          backend:
            service:
              name: email-service
              port:
                number: 5000
    - host: "<<PLACEHOLDER>>"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: email-service
              port:
                number: 5000
